--- a/render.yaml
+++ b/render.yaml
@@ -1,11 +1,8 @@
 services:
   - type: web
     name: express-time-app
+    plan: free
     runtime: docker
     env: node
-    buildCommand: npm install
-    startCommand: node index.js
-    port: 10000
-    envVars:
-      - key: NODE_ENV
-        value: production
+    port: 3000
+    autoDeploy: true
